# Cabinet_3D

./: .gitignore  README.md  cabinet.bat  logconfig.json  pyproject.toml  requirements.txt
config/: config.yaml  logconfig.json
docs/: communication_protocol.md  prd.md
src/: cabinet.py  main.py  msg_handler.py  tags.py  zones.py
test/: conftest.py  test_cabinets.py  test_tags.py  test_zones.py
